--- a/src/css/03-feedback.css
+++ b/src/css/03-feedback.css
@@ -7,6 +7,9 @@
   border: 1px solid rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
+li{
+  list-style: none;
+}
 
 .feedback-form label {
   display: flex;
